css/luggage_announcements.slider.css
.view-luggage-announcements .flex-control-nav {
    bottom: 0;
}

.view-luggage-announcements .flexslider {
	background: none;
	border: none;
	border-radius: none;
	box-shadow: none;
}

.view-luggage-announcements .flexslider .slides {
	margin: 0em;
	padding: 0em;
}

.view-luggage-announcements .flexslider .flex-caption {
	margin:-3em 2em 4em 0em;
	text-align: right;
	color:#fff;
}

.view-luggage-announcements .flexslider .flex-control-nav {
	z-index:100;
}

